Commit method for project requirement "3 days before and after filter"